<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="location_title">Location</string>
    <string name="KEY_LOCATION_PREFERENCE">Location_Preference_Key</string>
    <string name="KEY_UNITS_PREFERENCE">Units_Preference_Key</string>
    <string name="units_title">Pick Your Units</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_viewOnMap">Location on Map</string>
    <string name="action_share">Share</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string-array name="units_entries">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

    <string-array name="units_entry_values">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

     <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="account_type">com.example.sparsh</string>
    <string name="content_authority">com.sparsh.cool.developer.sunshine.app</string>


    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>


    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!--String for Storing the Location Status -->
    <string name="pref_location_status_key">loc-status</string>
    <string name="empty_forecast_list_no_network">No Weather Information is Available. The Network is not available to fetch data</string>
    <string name="empty_forecast_list_server_down">No Weather information Available. Server is not returning data</string>
    <string name="empty_forecast_list_server_error">No Weather Information is available. Server is not returning valid data</string>
    <string name="empty_forecast_list_location_invalid">No Weather Data available. The entered location is Invalid</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

</resources>
