<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sparsh.cool.developer.sunshine.fragments.DetailFragment">

    <include
        layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="16dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        app:columnCount="2">

        <TextView
            android:id="@+id/detail_humidity_label_textview"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_forecast_humidity_textView"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"

            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="38%" />

        <TextView
            android:id="@+id/detail_pressure_label_textview"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/detail_accent_label"

            app:layout_gravity="fill_horizontal"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/detail_forecast_pressure_textView"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"

            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="995 hPa" />

        <TextView
            android:id="@+id/detail_wind_label_textview"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/wind"
            android:textColor="@color/detail_accent_label"
            android:textSize="20sp"

            app:layout_gravity="fill_horizontal"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/detail_forecast_windspeed_textView"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"

            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            tools:text="4km/h NW" />

    </android.support.v7.widget.GridLayout>


</LinearLayout>
